[gd_scene load_steps=5 format=3 uid="uid://ch2ay0rg10jid"]

[ext_resource type="Script" path="res://weapons/pistol/pistol.gd" id="1_30c5q"]
[ext_resource type="Texture2D" uid="uid://c11f4u53jwrx2" path="res://weapons/pistol/pistol_icon.png" id="2_5twy5"]
[ext_resource type="Texture2D" uid="uid://dvpqs4dayer11" path="res://icon.svg" id="2_t8tuc"]
[ext_resource type="AudioStream" uid="uid://dd40y8odj6hju" path="res://weapons/audio/pistol_shoot.ogg" id="3_d4543"]

[node name="Pistol" type="Node2D"]
script = ExtResource("1_30c5q")
icon_image = ExtResource("2_5twy5")
weapon_name = "Pistol"
weapon_description = "Fires 2 bullets straight ahead"
shoot_sound = ExtResource("3_d4543")

[node name="BulletSpawns" type="Node2D" parent="."]

[node name="BulletSpawn1" type="Marker2D" parent="BulletSpawns"]
position = Vector2(6, -7)

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn1"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_t8tuc")

[node name="BulletSpawn2" type="Marker2D" parent="BulletSpawns"]
position = Vector2(6, 7)

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn2"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_t8tuc")

[node name="BackwardBulletSpawn" type="Node2D" parent="."]

[node name="BulletSpawn1" type="Marker2D" parent="BackwardBulletSpawn"]
position = Vector2(-8, 0)

[node name="Sprite2D" type="Sprite2D" parent="BackwardBulletSpawn/BulletSpawn1"]
visible = false
scale = Vector2(0.016, 0.016)
texture = ExtResource("2_t8tuc")

[node name="ShootSpeedTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="ShootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
